# mood

./: Cargo.toml  README.md  TODO.txt  flake.nix
.github/workflows/: buildpkgs.yml
client/: Cargo.toml
client/src/: application.rs  lib.rs  main.rs
client/src/camera/: camera_uniform.rs  light.rs  light_uniform.rs  mod.rs  shadow_map_uniform.rs
client/src/game/: collision_manager.rs  player.rs  player_controller.rs
client/src/model/: cube_texture.rs  map_loader.rs  mod.rs  player_model.rs
client/src/model/maps/: map_1.json
client/src/network/: command.rs  mod.rs  player_state.rs
client/src/renderer/: mod.rs  shadow_baker.rs
client/src/renderer/shaders/: player.wgsl
server/: Cargo.toml
server/src/: command.rs  lib.rs  main.rs  packet.rs
server/src/game/: player_state.rs
src/: application.rs  lib.rs  main.rs  renderer.rs
src/camera/: camera_uniform.rs  light.rs  light_uniform.rs  mod.rs  shadow_map_uniform.rs
src/collision/: bounding_box.rs  collision_manager.rs  mod.rs
src/game/: bounding_box.rs  mod.rs  player_controller.rs
src/mesh/: loader.rs  mod.rs
src/model/: cube_texture.rs  depth_texture.rs  map_loader.rs  mod.rs  model_instance.rs  texture.rs  vertex.rs
src/model/maps/: map_1.json  map_1.rs  mod.rs
src/renderer/: mod.rs  model_instance.rs  pipeline_factory.rs  scene_shadow_baker.rs  vertex.rs
src/renderer/shaders/: debug.wgsl  shader.wgsl  shadow.wgsl  skybox.wgsl
