[package]
name = "client"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
bytemuck = { version = "1.23.1", features = [ "derive" ] }
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
nalgebra = "0.33.2"
pollster = "0.4.0"
rand = "0.9.2"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wgpu = "25.0.2"
winit = "0.30.11"
