[package]
name = "server"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
bincode = { version = "2.0", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
nalgebra = "0.33.2"
serde = { version = "1.0.219", features = ["derive", "rc"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
